fixed white gap below banner images

--- a/stylesheets/blog-stylesheet.css
+++ b/stylesheets/blog-stylesheet.css
@@ -95,8 +95,9 @@ footer {
 #banner {
   position: relative;
   width: 40%;
-  margin-right: auto;
-  margin-left: auto;
+  /*margin-right: auto;*/
+  /*margin-left: auto;*/
+  display: block;
 }
 
 #info {
@@ -115,10 +116,10 @@ footer {
 
 #main4 {
   width: 85%;
-  margin-right: auto;
-  margin-left: auto;
+/*  margin-right: auto;
+  margin-left: auto;*/
   position: relative;
-  display: inline-block;
+  display: block;
   left: 7.5%;
   background-color: white;
 }
@@ -258,7 +259,7 @@ pre{
   margin-bottom: 1.4%;
   display: inline-block;
   position: relative;
-  bottom: 133px;
+  bottom: 113px;
 }
 
 #rbutton:hover{
